# Satellite-Movement---C---MatLab

./: README.md
SatelliteMovement/: CMakeLists.txt  main.cpp  setup.sh
SatelliteMovement/src/: const.h
SatelliteMovement/src/CalcEngine/: CalcEngine.cpp  CalcEngine.h
SatelliteMovement/src/Initializer/: Initializer.h
SatelliteMovement/src/Plot/: Plot.cpp  Plot.h
SatelliteMovement/src/Plot/scripts/: matlabPlot.m
SatelliteMovement/src/RandomGenerator/: RandomGenerator.h
SatelliteMovement/src/SafeVector/: SafeVector.h
SatelliteMovement/src/SatRange/: SatRange.h
SatelliteMovement/src/Satellite/: Satellite.h
SatelliteMovement/src/SatelliteData/: SatelliteData.cpp  SatelliteData.h
SatelliteMovement/src/Saver/: Saver.cpp  Saver.h
SatelliteMovement/src/Simulator/: Simulator.cpp  Simulator.h
SatelliteMovement/src/Threads/: Thread.h
SatelliteMovement/src/Vector3/: Vector3.h
SatelliteMovement/tests/: CMakeLists.txt  InitializerTests.cpp  RandomGenerator.cpp  SatRangeTests.cpp  SatelliteTests.cpp  Vector3Tests.cpp
matlab/: main.m
matlab/class/: Satelite.m
matlab/constants/: const.m
matlab/functions/: findRange.m  orbitalSpeed.m  perpendicularPlane.m  random.m  randomSatelliteAxis.m  rotateAroundAxis.m  sateliteHeight.m
misc/: untitled.m
